--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: tartan-showcase
-    env: python
+    runtime: python3
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
     envVars:
@@ -9,12 +9,3 @@ services:
         value: 3.11.0
       - key: SECRET_KEY
         generateValue: true
-      - key: DATABASE_URL
-        fromDatabase:
-          name: cmu-hub-db
-          property: connectionString
-
-databases:
-  - name: cmu-hub-db
-    databaseName: cmu_hub
-    user: cmu_user
